<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/artist"
        android:layout_marginTop="15dp"
        android:text="@string/name_song"
        android:textSize="@dimen/song_name_size"
        style="@style/StyleText"/>
    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/artist"
        android:textSize="@dimen/artist_size"
        style="@style/StyleText"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artist"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/time"
        android:textColor="@color/colorText"
        android:textSize="@dimen/time_size"
        style="@style/StyleText"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/button_listen_size"
        android:layout_height="@dimen/button_listen_size"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/name"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:srcCompat="@drawable/ic_audiotrack_24dp" />

</RelativeLayout>