<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context="com.dape.musicalstructureapp.DetailsActivity">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/detail_music" />
    <SeekBar
        android:id="@+id/timeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_image"
        android:progressBackgroundTint="@color/colorIcon"
        android:progressTint="@color/colorIcon" />
    <TextView
        android:id="@+id/detail_time_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timeBar"
        android:layout_below="@+id/timeBar"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/detail_time"
        android:textSize="@dimen/time_size"
        style="@style/StyleText"/>
    <TextView
        android:id="@+id/detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_below="@id/detail_time_finish"
        android:text="@string/detail_name"
        android:textSize="@dimen/song_name_size"
        android:gravity="center"
        style="@style/StyleText"/>
    <TextView
        android:id="@+id/detail_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_below="@id/detail_name"
        android:text="@string/detail_artist"
        android:textSize="@dimen/artist_size"
        android:gravity="center"
        style="@style/StyleText"/>
    <Button
        android:id="@+id/pause"
        android:layout_width="@dimen/play_pause_size"
        android:layout_height="@dimen/play_pause_size"
        android:layout_below="@+id/detail_artist"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/ic_pause_24dp" />
    <Button
        android:id="@+id/button_song_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_rounded"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_below="@id/pause"
        android:text="@string/button_song_list"
        style="@style/StyleText"/>
    <TextView
        android:id="@+id/detail_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/timeBar"
        android:layout_below="@+id/timeBar"
        android:layout_marginLeft="@dimen/margin"
        android:layout_gravity="right"
        android:text="@string/detail_time"
        android:textSize="@dimen/time_size"
        style="@style/StyleText"/>

</RelativeLayout>
